# hsinstall

./: .gitignore  CHANGELOG.md  LICENSE  README.md  changelog.md  hsinstall.cabal  package.yaml  stack.yaml
app/: Main.hs
doc/hcar/: hsinstall.tex
hsinstall/share/applications/: hsinstall.desktop
resources/: foo
src/: HSInstall.hs
src/app/: hsinstall.hs
src/app/HSInstall/: AppImage.hs  Build.hs  Common.hs  DeploymentInfo.hs  Dirs.hs  Except.hs  Opts.hs
src/app/HSInstall/System/: Directory.hs
src/hsinstall/: Main.hs  Opts.hs
src/lib/: HSInstall.hs
src/lib/HSInstall/: Paths.hs  Resources.hs
util/: install.hs
