name:                hsinstall
version:             1.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            
license:             ISC
license-file:        LICENSE
author:              Dino Morelli
maintainer:          Dino Morelli <dino@ui3.info>
copyright:           2016 Dino Morelli
stability:           experimental
category:            Utility
build-type:          Simple
cabal-version:       >=1.10
data-files:          resources/foo
extra-source-files:  stack.yaml
                     util/install.hs

executable an-app
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , filepath
  default-language:    Haskell2010

--source-repository head
--  type:     git
--  location: https://github.com/githubuser/stack-data-files
