name:                hsinstall
version:             1.0
synopsis:            Install Haskell software
description:         This is a utility to install Haskell programs on a system using stack. Even though stack has an `install` command, I found it to be not enough for my needs. This software tries to install the binaries, the LICENSE file and also the resources directory if it finds one.
homepage:            
license:             ISC
license-file:        LICENSE
author:              Dino Morelli
maintainer:          Dino Morelli <dino@ui3.info>
copyright:           2016 Dino Morelli
stability:           experimental
category:            Utility
build-type:          Simple
cabal-version:       >=1.10
data-files:          resources/foo
extra-source-files:  stack.yaml
                     util/install.hs

executable an-app
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , filepath
  default-language:    Haskell2010

source-repository head
  type:     darcs
  location: http://hub.darcs.net/dino/hsinstall
