cabal-version: 2.2

name: hsinstall
version: 2.9
synopsis: Install Haskell software
description: This is a tool for deploying software projects into directory
  structures suitable for installation on a system. It builds upon the `stack
  install` command and adds more features. It's also a tool for easier AppImage
  creation.
category: Utility
homepage: https://github.com/dino-/hsinstall#readme
bug-reports: https://github.com/dino-/hsinstall/issues
author: Dino Morelli
maintainer: Dino Morelli <dino@ui3.info>
copyright: 2016 Dino Morelli
license: ISC
license-file: LICENSE
build-type: Simple
extra-source-files:
  doc/hcar/hsinstall.tex
  .gitignore
  hsinstall/share/applications/hsinstall.desktop
  hsinstall/share/hsinstall/resources/unix-terminal.svg
  hsinstall/share/icons/hicolor/scalable/apps/hsinstall.svg
  README.md
  stack.yaml
  stack.yaml.lock
extra-doc-files:
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/dino-/hsinstall

common lang
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
  ghc-options:
    -fwarn-tabs
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
      base >=3 && <5
    , directory >=1.3.8.1
    , filepath >=1.4.100.4
  other-modules:
    Paths_hsinstall
  autogen-modules:
    Paths_hsinstall

library
  import: lang
  exposed-modules:
      HSInstall.Paths
  other-modules:
      Paths_hsinstall
  hs-source-dirs:
      src/lib
  -- build-depends:

executable hsinstall
  import: lang
  main-is: hsinstall.hs
  other-modules:
      HSInstall.AppImage
      HSInstall.Build
      HSInstall.Common
      HSInstall.DeploymentInfo
      HSInstall.Except
      HSInstall.Opts
      HSInstall.System.Directory
      Paths_hsinstall
  hs-source-dirs:
      src/app
  build-depends:
      Cabal >=3.10.1.0
    , exceptions >=0.10.7
    , formatting >=7.2.0
    , heredoc >=0.2.0.0
    , hsinstall < 3
    , optparse-applicative >=0.18.1.0
    , prettyprinter >=1.7.1
    , process >=1.6.17.0
    , safe-exceptions >=0.1.7.4
    , transformers >=0.6.1.0
